[package]
name = "ironworks"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21"
clap = { version = "4.3", features = [ "derive" ] }
conpty = "0.5.1"
crossterm = "0.26.1"
curl = "0.4.44"
dunce = "1.0"
fs_extra = "1.3"
jomini = "0.22"
log = "0.4"
pretty_env_logger = "0.5"
ratatui = "0.22"
ring = "0.16"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
strip-ansi-escapes = "0.1.1"
toml = "0.7"
walkdir = "2"
zip = "0.6.6"
