[package]
name = "ironworks"
version = "0.2.1"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.3", features = [ "derive" ] }
conpty = "0.5.1"
crossterm = "0.27"
curl = "0.4.44"
dunce = "1.0"
fs_extra = "1.3"
itertools = "0.13"
jomini = "0.26"
log = "0.4"
pretty_env_logger = "0.5"
ratatui = "0.27"
reqwest = { version = "0.12", features = [ "json" ] }
ring = "0.17"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
strip-ansi-escapes = "0.2"
toml = "0.8"
tokio = { version = "1", features = [ "full" ] }
walkdir = "2"
zip = "2.1"
